<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@drawable/gradient_background_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/indeed_logo"
        android:contentDescription="@string/icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/tv_title"
        android:text="@string/indeed_movies"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_icon"
        android:layout_marginTop="@dimen/margin_default_medium"
        />

    <EditText
        android:id="@+id/et_login"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/text_grey"
        android:autofillHints="username"
        android:drawableStart="@drawable/ic_person"
        android:backgroundTint="@color/text_grey"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        />

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/text_grey"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_lock"
        android:backgroundTint="@color/text_grey"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_login_buttons"
        android:layout_marginBottom="@dimen/margin_default_medium"
        />

    <LinearLayout
        android:id="@+id/ll_login_buttons"
        android:layout_width="300dp"
        android:layout_height="@dimen/login_button_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_register"
        android:layout_marginBottom="@dimen/margin_default_medium"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/button_rounded_angles_background"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_register"
            />

        <ImageButton
            android:id="@+id/btn_fingerprint"
            android:contentDescription="@string/icon"
            android:background="@drawable/button_round_background"
            android:src="@drawable/ic_fingerprint"
            android:layout_width="@dimen/login_button_size"
            android:layout_height="@dimen/login_button_size"
            android:layout_marginStart="@dimen/margin_default_small"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_register"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/text_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>